# logsearch

./: .gitignore  LICENSE  README.md  config.example.toml  config.recursive-demo.toml
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/src/: api.rs  config.rs  index.rs  lib.rs  main.rs  scanner.rs  search.rs  server.rs  state.rs  tail.rs  watcher.rs
docs/: gitee-release-sync.md  tail.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: remote-api.mjs
frontend/src/: App.css  App.tsx  App.vue  index.css  resultInteraction.ts
frontend/src/components/: Icon.vue  PreviewPane.vue
frontend/src/domain/: auth.ts  highlight.ts  logs.ts  theme.ts
frontend/tests/: auth.test.mjs  logDomain.test.mjs  resultInteraction.test.mjs  theme.test.mjs
packaging/: README.txt  log-search.service  start.sh  status.sh  stop.sh  upgrade.ps1  upgrade.sh
samples/directory-demo/: app.log.2.zst  app.log.3.bz2  app.log.4.xz
scripts/: package-centos7-docker.sh  package-linux.sh  package-release.mjs  package-release.test.mjs  sync-gitee-release.mjs  sync-gitee-release.test.mjs  test-start-config.sh  test-upgrade.sh
