[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
flate2 = "1.1.9"
notify = "9.0.0-rc.4"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha2 = "0.11.0"
tantivy = "0.26.1"
tantivy-jieba = "0.19.0"
tempfile = "3.27.0"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.9.12"
tower-http = { version = "0.6.11", features = ["cors", "fs", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"
